--- a/DFEitechLibrary/Views/Type/RefinedTypes.cshtml
+++ b/DFEitechLibrary/Views/Type/RefinedTypes.cshtml
@@ -1,25 +1,21 @@
 ﻿@model IEnumerable<DFEitechLibrary.Models.BookType>
 @{
-    ViewBag.Title = "ListTypes";
-    <link rel="stylesheet" type="text/css" href="~/Content/Site.css/?ts=<?=time()?>" &quot; />
+    ViewBag.Title = "RefinedTypes";
     var wb = new WebGrid(source: Model, columnNames: new[] { "Id", "Name", "Duration", "Penalty" });
 }
 
-<div id="typeSlide">
-    <div>
-        <h2>ListBookTypes</h2>
-            @wb.GetHtml(columns: wb.Columns(
+<h2>RefinedSearches</h2>
+<div>
+    <h2>ListBookTypes</h2>
+    @wb.GetHtml(columns: wb.Columns(
             wb.Column(columnName: "Id", header: "ID#"),
             wb.Column(columnName: "Name", header: "Name"),
             wb.Column(columnName: "Duration", header: "Duration"),
             wb.Column(columnName: "Penalty", header: "Penalty")
-            ))     
-    </div>    
+            ))
 </div>
+
 <div>
     @Html.Partial("_SearchTypes")
 </div>
 
-<div>
-    @Html.Partial("_TypeForm", new DFEitechLibrary.Models.BookType())
-</div>
